fix the bug:background not stretch, final check

--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@
     margin: 0px;
     padding: 0px;
   }
-  
   h1{
+    margin-top: 2em;
     font-family: 'Roboto', sans-serif;
     color: black;
     font-size:x-large;
@@ -21,18 +21,15 @@
     width: 100%;
     height: 100%;
   }
-  .container{
+  .wrapper{
     background-image: url('images/earthBG.jpg');
     background-size:contain;
     text-align: center;
-    
-   
   }
-  
-  button, input[type="text"] {
+  input[type="text"] {
     padding: 6px;
+    width: 400px;
   }
-
   label{ 
     border: 0;
     clip: rect(0 0 0 0);
@@ -44,7 +41,7 @@
     width: 1px;
   }
   input[type='submit']{
-    width: 7em;
+    width: 6em;
     height: 2.2em;
     color:whitesmoke; 
     background-color: transparent; 
@@ -58,7 +55,7 @@
   .group {
     display: flex;
     flex-direction: column;
-    margin: auto;
+    /* margin: auto; */
   }
   .item {
     flex: 1;
@@ -71,5 +68,4 @@
       width: 80%;
       margin: auto;
     }
-
   }
